--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
 
     <!-- ------- Header Bereich ----------- -->
-    <section class="d-flex justify-content-around">
+    <section class="d-flex justify-content-around bg-light">
     <!-- -----Logo----- -->
       <nav class="navbar">
         <div class="container-fluid">
