--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- ------- Weather Bereich ----------- -->
 
     <div class="container my-5"  id="weather">
-      <div class="card shadow text-center" style="height: 400px;">
+      <div class="card shadow text-center" style="height: 400px;" id="card">
         <div class="card-header d-flex justify-content-between align-items-center">
           <i class="fas fa-sun fa-2x text-warning"></i>
           <span class="h5 mb-0">Weather</span>
@@ -78,10 +78,10 @@
             <input type="text" class="form-control text-center w-100" id="searchBar" placeholder="Stadtnamen">
           </div>
           <div class="content">
-            <div class="city h4">Istanbul, TR</div>
+            <div class="city h1">Düsseldorf, DE</div>
             <div class="temp display-4">22°C</div>
-            <div class="desc h5">Sonnig</div>
-            <div class="minmax">14°C / 19°C</div>
+            <div class="desc h3">Sonnig</div>
+            <div class="min-max h3">14°C / 19°C</div>
           </div>
         </div>
       </div>
