--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#news">News</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="comments.html">Kommentare</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -63,16 +66,20 @@
     </section>
     <!------ Header end ----------------- -->
 
+    <!-- test  test test  -->
+
+    
+
     <!-- ------- Weather Bereich ----------- -->
 
     <div class="container my-5"  id="weather">
-      <div class="card shadow text-center" style="height: 400px;" id="card">
+      <div class="card shadow text-center bg-transparent" style="height: 600px;" id="card">
         <div class="card-header d-flex justify-content-between align-items-center">
           <i class="fas fa-sun fa-2x text-warning"></i>
           <span class="h5 mb-0">Weather</span>
           <i class="fas fa-cloud fa-2x text-primary"></i>
         </div>
-        <div class="card-body">
+        <div class="card-body ">
           <div class="mb-3 d-flex flex-column ">
             <label for="searchBar" class="form-label"><i class="fas fa-location-dot"></i> Bitte Stadtnamen eingeben!</label>
             <input type="text" class="form-control text-center w-100" id="searchBar" placeholder="Stadtnamen">
