--- a/comments.html
+++ b/comments.html
@@ -34,7 +34,7 @@
           <div class="col-lg-8">
             <div class="card mb-4">
               <div class="card-body">
-                <h5 class="card-title">Yorumlar</h5>
+                <h5 class="card-title">Kommentare</h5>
                 <hr />
                 <blockquote class="border-bottom">
                   <div class="float-end">
@@ -158,7 +158,7 @@
             </div>
             <div class="card">
               <div class="card-body">
-                <h4 class="mb-3">Yorum Yap</h4>
+                <h4 class="mb-3">Kommentar Abgeben</h4>
                 <form>
                   <div class="mb-3">
                     <input type="text" class="form-kontrol" placeholder="Name">
